minecraft-stack/minecraft/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: minecraft-server
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 8100
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
            - name: ops-configmap
              mountPath: /data/ops.json
              subPath: ops.json
            - name: plugins-configmap
              mountPath: /extras/mods.txt
              subPath: mods.txt
            - name: essentias-configmap
              mountPath: /data/Essentials/config.yml
              subPath: config.yml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: minecraft-server-config-pvc
        - name: ops-configmap
          configMap:
            name: ops-config
        - name: essentias-configmap
          configMap:
            name: essentials-config
        - name: plugins-configmap
          configMap:
            name: minecraft-plugins
