minecraft-stack/minecraft/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-jtmb-ingress
  namespace: minecraft-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wordpress.rancher-dev.branconet.lan # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-jtmb-service
                port:
                  number: 80
