minecraft-stack/minecraft/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap-internal-ingress
  namespace: minecraft-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bluemap.rke  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap-mc-server-service
                port:
                  number: 8100
